<resources>
    <string name="app_name">U-Store</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password must be more than 6 characters long!</string>
    <string name="auth_failed">Sign in failed! Please try again or reset your password.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Dont have an account? Register here!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Go Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter the email you signed up with to receive further instructions on resetting your password.</string>
    <string name="email_id">Email ID </string>
    <string name="title_activity_store_and_department_setup">StoreAndDepartmentSetupActivity</string>
    <string name="title_activity_aisle_bay_setup">AisleBaySetup</string>
    <string name="title_activity_view_database">ViewDatabase</string>
    <string name="title_activity_shelving_setup">ShelvingSetup</string>
    <string name="title_activity_add_inventory">AddInventory</string>
    <string name="title_activity_edit_store_and_department">EditStoreAndDepartmentActivity</string>
    <string name="title_activity_store_layout">StoreLayoutActivity</string>
    <string name="title_activity_search_inventory">SearchInventoryActivity</string>
    <string name="title_activity_search_inventory_tabbed">SearchInventoryTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_search_inventory_by_department">
        SearchInventoryByDepartmentActivity
    </string>

    <string name="title_activity_fullscreen_drawning">FullscreenDrawningActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_manage_account">ManageAccountActivity</string>
</resources>
