<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image7"
    tools:context="accountlogin.registrationapp.SignupActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="151dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/ulogo"
        android:contentDescription=""
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="17dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/userlogin_logo2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextHintColor"
            android:layout_marginLeft="5dp"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="198dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/password"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/passlogin_logo1"
            android:layout_marginLeft="5dp"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextHintColor"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="258dp" />
    </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in_short"
            android:background="@drawable/buttonshape1"
            android:textColor="@color/textBackgroundColor"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="321dp" />

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/editTextHintColor" />


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Already Have An Account?"
            android:textAllCaps="false"
            android:textColor="@color/editTextHintColor"
            android:textSize="15sp" />
    </LinearLayout>






    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</android.support.constraint.ConstraintLayout>
