<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image7"
    tools:context="accountlogin.registrationapp.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:progressTint="@color/bg_login"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="492dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="151dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/ulogo"
        android:contentDescription=""
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <Button
            android:id="@+id/store_owner_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="Store Owner Login"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="170dp" />

        <Button
            android:id="@+id/store_user_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Store User Login"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="170dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/storeOwner_linearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextHintColor"
            android:drawableLeft="@drawable/userlogin_logo2"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="218dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/password"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/editTextColor"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/editTextHintColor"
            android:drawableLeft="@drawable/passlogin_logo1"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="290dp" />
    </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:background="@drawable/buttonshape1"
            android:textColor="@color/textBackgroundColor"
            android:text="Login" />
        <Button
            android:id="@+id/btn_reset_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/editTextHintColor"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="402dp" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/editTextHintColor"
            android:textSize="15dp"
            tools:ignore="SpUsage"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="438dp" />
    </LinearLayout>

    <!--Store User Loging Linear Layout-->
    <LinearLayout
        android:id="@+id/storeUser_linearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">

        <EditText
            android:id="@+id/store_name1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/storelogin_logo"
            android:ems="10"
            android:hint="Enter Store Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/editTextHintColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/unique_pass"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/editTextHintColor"
            android:drawableLeft="@drawable/passlogin_logo1"
            android:hint="Enter Stores Unique Password"
            android:inputType="textPersonName" />
</LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/email_name1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/editTextHintColor"
            android:drawableLeft="@drawable/userlogin_logo2"
            android:hint="Enter Assigned Email"
            android:inputType="textPersonName" />
</LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textfield">
        <EditText
            android:id="@+id/password1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/editTextHintColor"
            android:drawableLeft="@drawable/passlogin_logo1"
            android:hint="Enter Assigned Password"
            android:inputType="textPersonName" />
    </LinearLayout>
        <Button
            android:id="@+id/btn_login1"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:text="Login"
            android:background="@drawable/buttonshape1"
            android:textColor="@color/textBackgroundColor"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="345dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
